<resources>
    <string name="app_name">TaskApp2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="data">Data</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="here">Here you can write down something important or make a schedule for tomorrow:)</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="sort">Sort</string>
    <string name="sortbyalphabet">Sort by alphabet</string>
    <string name="sortbytime">Sort by time</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="add">add</string>
    <string name="enter_your_name">enter your name</string>
    <string name="profile">Profile</string>
    <string name="send">send</string>
    <string name="your_phone_number">your phone number</string>
    <string name="fragment_new_task">fragment_new_task</string>
    <string name="fragment_profile">Profile</string>
    <string name="authentication_fragment">Authentication</string>
    <string name="confirm">confirm</string>
    <string name="enter_code">enter code</string>
    <string name="phone_number">Phone number</string>
    <string name="exit">Exit</string>
    <string name="phone">phone</string>
    <string name="information_about_user">Information about user</string>
</resources>