<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="36dp"
    tools:context=".ui.onBoard.OnBoardPageFragment">

    <ImageView
        android:id="@+id/image_board"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/title_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/image_board"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/description_board"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/here"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/skip"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/next"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/skip_btn"
        app:layout_constraintTop_toTopOf="@id/skip_btn"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="64dp"
        android:paddingVertical="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_btn"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginBottom="44dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="64dp"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:backgroundTint="@color/black"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>